--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
   </div>
 
   <!-- Google Identity Services -->
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script src="https://accounts.google.com/gsi/client"></script>
 
   <script>
     // ═══════════════════════════════════════════════════════════════
